Candidate card overflow fix plus sans-serif font fallback.

--- a/theme/ElectionData-V2/style.css
+++ b/theme/ElectionData-V2/style.css
@@ -27,7 +27,7 @@ time, mark, audio, video {
 	padding: 0;
 	border: 0;
 	font-size: 100%;
-	font-family: "Libre Franklin";
+	font-family: "Libre Franklin", sans-serif;
 	vertical-align: baseline; }
 
 h1, h2, h3, h4, h5, h6 {
@@ -35,9 +35,9 @@ h1, h2, h3, h4, h5, h6 {
 	padding: 0;
 	border: 0;
 	vertical-align: baseline;
-	font-family: "Libre Franklin"; }
+	font-family: "Libre Franklin", sans-serif; }
 	h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
-		font-family: "Libre Franklin"; }
+		font-family: "Libre Franklin", sans-serif; }
 
 footer, header, hgroup, menu, nav, section {
 	display: block; }
@@ -125,7 +125,7 @@ overflow: hidden;}
     margin-left: 0;
     margin-top: 20px;
     margin-bottom: 0.25em;
-    font-family: "Libre Franklin";
+    font-family: "Libre Franklin", sans-serif;
     font-size: 36px;
     font-weight: bold;
     padding-right: 45px;
@@ -141,7 +141,7 @@ overflow: hidden;}
     color: #777;
     margin: 0 0 0.5em 0;
     padding-right: 45px;
-    font-family: "Libre Franklin";
+    font-family: "Libre Franklin", sans-serif;
     font-style: italic; }
 
 .breadcrumbs {
@@ -241,7 +241,7 @@ p.news-article-notice{
 	background-color: #eee;
   font-size: 1.05em;
 	float: left;
-  overflow: none;
+  overflow: hidden;
   zoom: 1; }
 
 .tall {
@@ -264,7 +264,7 @@ p.news-article-notice{
 
 .politician .head {
   border-radius: 10px; 
-  overflow: auto;
+  overflow: hidden;
   zoom: 1;
   margin-bottom: 30px;
 }
@@ -629,7 +629,7 @@ box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.1);
 	line-height:25px;
 	text-decoration:none;
 	padding:0 23px 0 15px;
-	font-family: "Libre Franklin";
+	font-family: "Libre Franklin", sans-serif;
 }
 .menu > ul > li > a {float:left; color:#2B4270; }
 .menu ul ul li a {line-height:20px;}
@@ -862,12 +862,12 @@ ul.voter li {
 .header-time p{
 	font-size: 25px;
     margin-bottom: 10px;
-    font-family: "Libre Franklin";
+    font-family: "Libre Franklin", sans-serif;
 }
 .header-time h2{
 	font-size: 30px;
     margin-bottom: 0;
-    font-family: "Libre Franklin";
+    font-family: "Libre Franklin", sans-serif;
     font-weight: 300;
 }
 header{
@@ -1362,7 +1362,7 @@ input:-ms-input-placeholder {
 	color: #FFFFFF;
 	font-weight: 400;
 	font-size:15px;
-	font-family: "Libre Franklin";
+	font-family: "Libre Franklin", sans-serif;
 	font-style: italic;
 }
 
@@ -1374,7 +1374,7 @@ input:-ms-input-placeholder {
 	background: #A48AAC;
 	padding:3px;
 	border-radius: 3px;
-	font-family: "Libre Franklin";
+	font-family: "Libre Franklin", sans-serif;
 	font-style: italic;
 }
 
